--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,10 @@ dependencies:
   rxdart: ^0.22.5
   flutter_screenutil: ^0.6.0
   font_awesome_flutter: ^8.5.0
+  flip_card: ^0.4.4
   flutter:
     sdk: flutter
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
